--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13"
   },
